<resources>
    <string name="app_name">Virtual Guide</string>
    <string name="title_activity_first_page_side_bar">FirstPageSideBar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="description_info">Info</string>
    <string name="request_permission">This app needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="toggle_turn_on">NN:On</string>
    <string name="toggle_turn_off">NN:Off</string>
    <string name="toggle">Use NNAPI</string>
    <string name="tflite">tflite</string>
    <string name="nnapi">NNAPI</string>
    <string name="threads">Threads:</string>

    <string name="restaurants">Restaurants</string>
    <string name="monuments">Monuments</string>
    <string name="atms">ATM</string>
    <string name="hospital">Hospital</string>
    <string name="hotels">Hotels</string>
    <string name="search">Search</string>

    <string name="model">Model:</string>
    <string-array name="models">
        <item>Float</item>
        <item>Quantized</item>

    </string-array>

    <string name="device">Device:</string>
    <string-array name="devices">
        <item>CPU</item>
        <item>GPU</item>
        <item>NNAPI</item>
    </string-array>
    <string name="title_activity_maps">Virtual Guide Map</string>
</resources>
